--- a/style.css
+++ b/style.css
@@ -417,3 +417,10 @@ h1 {
 .blog-index-time {
     display: inline;
 }
+
+.videoInsert {
+    width: 100%; 
+    height: 100%; 
+    background-size: cover;
+    overflow: hidden;
+}
