--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ body {
 	border-bottom-style: solid;
 	border-bottom-color: #1a1b23;
 	-webkit-font-smoothing: antialiased; 
-	padding-left: 0px;
-	padding-right: 0px;
+	padding-left: 120px;
+	padding-right: 120px;
 	padding-top: 12px;
 	padding-bottom: 12px;
 }
@@ -175,6 +175,12 @@ body {
 	font-weight:lighter;
 }
 
+.labelthin-bold {
+    font-family: 'Roboto Slab', serif;
+	font-size: 16px;
+	font-weight:bold;
+}
+
 .label {
     font-family:  'Lato', sans-serif;
 	font-size: 16px;
@@ -210,6 +216,10 @@ body {
     margin-top: 100px;
 }
 
+.mb-0 {
+	margin-bottom: 0px;
+}
+
 .mb-4 {
 	margin-bottom: 24px;
 }
@@ -225,6 +235,12 @@ body {
 
 .home-illu {
  	max-width: 100%;
+ 	padding-left: 0px;
+ 	padding-right: 0px;
+ }
+
+.home-illu-half {
+ 	max-width: 150%;
  	padding-left: 0px;
  	padding-right: 0px;
  }
@@ -248,6 +264,10 @@ body {
 
 .bottom-pad {
     padding-bottom: 24px;
+}
+
+.no-bottom-pad {
+    padding-bottom: 0px;
 }
 
 .top-pad {
@@ -304,7 +324,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 .contact-shade {
     min-height: 0;
-    background: #e6e1d0;
+    background: #C8EBFF;
 }
 
 .sandbox-shade {
