update compliance color

--- a/style.css
+++ b/style.css
@@ -472,8 +472,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 .compliance-shade {
     min-height: 0;
-    border: 1px solid #6B633D;
-    background: #6B633D;
+    border: 1px solid #17375E;
+    background: #17375E;
 }
 
 .deidentify-shade {
